...
            "value" : "Stornieren"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancelar"
...
            "value" : "Bühnentext"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Stage Text"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Texto del escenario"
...
            "value" : "Text senden"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Send Text"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enviar texto"
...
